# QtDemoTest

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-clang-format-check.yml  ci-release.yml
cmake/: appicon.cmake  version.h.in
installer/: product.wixobj  sVanilla.msi  sVanilla.wixpdb
resource/: QtDemoTest.qrc
scripts/: QtDemoTest.wxs  generator_wxs.py  license.rtf  product.wxs
src/: mainwindow.cpp  mainwindow.h
src/client/: mainwindow.cpp  mainwindow.h
workflows/: ci-clang-format-check.yml  ci-release.yml
